Fix spacing on about page.

--- a/src/app/views/about/about.component.scss
+++ b/src/app/views/about/about.component.scss
@@ -3,3 +3,7 @@
     min-height: 301px;
     min-width: 197px;
 }
+
+p {
+    margin-bottom: 10px;
+}
